crates/keron-lang/tests/corpus/errors/check/concat_resource_with_int.keron
from "std:fs" use symlink, Symlink

val syms: List<Symlink> = [symlink(from = "a", to = "b")]
val ns: List<Int> = [1, 2]
val all = syms ++ ns
